# au-jobs

./: .env.example  .gitignore  README.md  build_site_data.py  generate_pages.py  parse_jsa.py  pyproject.toml  score.py  test_score.py
docs/: data.json  index.html
runs/: 2026-03-18T000000_scores.json  2026-04-11T080617_scores.json  2026-04-11_scores.json
